--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -294,9 +294,7 @@ $checkout-step-count-text-align:                 center !default;
 
 $checkout-step-padding:                          $global-spacing-small 0 !default;
 
-$checkout-substep-title-margin:                  0 0 $global-spacing-extra-small !default;
-$checkout-substep-title-padding-left:            $global-spacing-tiny !default;
-$checkout-substep-title-padding:                 0 0 0 #{ $global-spacing-tiny } !default;
+$checkout-substep-title-margin:                  0 0 $global-spacing-extra-small 0 !default;
 $checkout-substep-title-color:                   $dark-grey !default;
 $checkout-substep-title-font-size:               $font-size-small !default;
 $checkout-substep-title-font-size--large-screen: $font-size-small--large-screen !default;
@@ -306,7 +304,7 @@ $checkout-substep-title-text-align:              left !default;
 $checkout-substep-title-check-icon-size:         $icon-size-small !default;
 $checkout-substep-title-check-icon-spacing:      $global-spacing-tiny !default;
 
-$checkout-substep-text-padding:                  0 0 0 #{ $checkout-substep-title-padding-left + $global-spacing-extra-small + $checkout-substep-title-check-icon-size } !default;
+$checkout-substep-text-padding:                  0 0 0 #{ $global-spacing-tiny + $global-spacing-extra-small + $checkout-substep-title-check-icon-size } !default;
 $checkout-substep-text-color:                    $grey !default;
 $checkout-substep-text-font-size:                $font-size-small !default;
 $checkout-substep-text-font-size--large-screen:  $font-size-small--large-screen !default;
