--- a/sass/partials/_checkout-steps.scss
+++ b/sass/partials/_checkout-steps.scss
@@ -12,7 +12,6 @@
 
 .wfc-step__substep-title {
 	margin: $checkout-substep-title-margin;
-	padding: $checkout-substep-title-padding;
 	color: $checkout-substep-title-color;
 	font-weight: $checkout-substep-title-font-weight;
 	font-size: $checkout-substep-title-font-size;
